@@ -8,9 +8,15 @@
 
 <h1 style="align:center">Raptor RDF Query Library - News</h1>
 
-<h2>2004-??-?? Version 0.9.2 Released</h2>
-<p>FIXME
+<h2>2004-08-03 Version 0.9.2 Released</h2>
+<p>Fix casts for C++<br />
+Add win32 skeleton header file<br />
+Fix a memory leak when using redland inside rasqal
 </p>
+
+<p>See the <a href="RELEASE.html#rel0_9_2">0.9.2 Release Notes</a>
+for the full details of the changes.</p>
+
 
 <h2>2004-06-13 Version 0.9.1 Released</h2>
 <p>Added a query results class separate from the query class and moved
