@@ -8,6 +8,35 @@
 
   <h1>Rasqal RDF Query Library - Release Notes</h1>
 
+<h2 id="rel0_9_2"><a name="rel0_9_2">Rasqal 0.9.2 Changes</a></h2>
+
+<p>This release made minor portability fixes for building with
+C++ and Win32 (untested).</p>
+
+<p>Several functions changed their parameters or return values from
+char* to unsigned char* or const unsigned char* to reflect the
+actual use.</p>
+
+<p>Changed to return a <code>const unsigned char*</code>:<br />
+<code>rasqal_literal_as_string</code>
+</p>
+
+<p>Changed to take <code>const unsigned char*</code> (or add
+<code>const</code>):<br />
+<code>rasqal_new_floating_literal</code><br />
+<code>rasqal_new_pattern_literal</code><br />
+<code>rasqal_new_prefix</code><br />
+<code>rasqal_new_simple_literal</code><br />
+<code>rasqal_new_string_literal</code><br />
+<code>rasqal_new_variable</code><br />
+<code>rasqal_query_has_variable</code><br />
+<code>rasqal_query_results_get_binding_name</code><br />
+<code>rasqal_query_results_get_binding_value_by_name</code><br />
+<code>rasqal_query_results_get_bindings</code><br />
+<code>rasqal_query_set_variable</code><br />
+</p>
+
+
 <h2 id="rel0_9_1"><a name="rel0_9_1">Rasqal 0.9.1 Changes</a></h2>
 
 <p>This release changed the way that results were returned.  A new
