@@ -1,5 +1,7 @@
 2004-08-03  Dave Beckett  <Dave.Beckett@bristol.ac.uk>
 
+	* Snapshotted rasqal_0_9_2 for 0.9.2 release
+
 	* roqet.c, rdql_parser.y, rdql_lexer.l, rasqal_raptor.c,
 	rasqal_query.c, rasqal_literal.c, rasqal_internal.h,
 	rasqal_general.c, rasqal_expr.c, rasqal_engine.c: Update for
